add query to show all products in the products table.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/armthepit/Bamazon#readme",
   "dependencies": {
+    "clear": "0.0.1",
     "inquirer": "^1.2.2",
     "mysql": "^2.11.1"
   }
